fixed layout bug

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -7,5 +7,5 @@ body {
 }
 
 main {
-  @apply max-w-screen-2xl mx-auto 2xl:px-12;
+  @apply max-w-screen-2xl mx-auto px-4 md:px-12;
 }
